mxslc/tests/data/error/global_4.mxsl
global float x = 0.0;